# Jordanwright

./: .gitignore  .pre-commit-config.yaml  DEVELOPER.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: test_main.py
