[project]
name = "jordanwright"
version = "0.1.0"
description = "Minimal scaffold for the Jordanwright workspace"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "jorwrght-png", email = "devnull@example.com" } ]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
